--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
 
     <!-- Cover Image -->
-    <img class="cover" src="C:\Users\joyal\Downloads\Yellow and Brown Minimalist Sleep Over Vlog YouTube Thumbnail (2)\1.png" alt="Cover Image">
+    <img class="cover" src="1.png" alt="Cover Image">
 
 
     <div class="middle">
