--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
     
     <div class="wrapper">
-        <img class="logo" src="C:\Users\joyal\Downloads\WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png" alt="Prerana logo">
+        <img class="logo" src="prerana.media/WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png" alt="Prerana logo">
         <input type="text" class="search" placeholder="Search...">
         <div class="wrapper-content">
             <div class="space>">
