--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             margin: 0 10px;
         }
         .initiatives, .contact-form, .stakeholders,.middle {
-            background-image: url('C:/Users/joyal/Downloads/imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
+            background-image: url('imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
