--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
             <div class="dropdown">
                 <button>Donate</button>
                 <div class="content">
-                    <a href="file:///C:/Users/joyal/done.html">Online Donation Policy</a>
-                    <a href="file:///C:/Users/joyal/done.html">Donate Us</a>
+                    <a href="aboutus2.html">Online Donation Policy</a>
+                    <a href="aboutus2.html">Donate Us</a>
                 </div>
             </div>
             <div class="dropdown">
