--- a/aboutus.html
+++ b/aboutus.html
@@ -93,7 +93,7 @@
         }
         .box
         {
-            background-image: url('C:/Users/joyal/Downloads/imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
+            background-image: url('imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
