--- a/aboutus2.html
+++ b/aboutus2.html
@@ -193,7 +193,7 @@
 
 </style>
 <div class="wrapper">
-    <img class="logo" src="WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png">
+    <img class="logo" src="google5.jpg">
     <input type="text" class="search" placeholder="Search...">
     <div class="wrapper-content">
         <div class="dropdown">
