--- a/media1.html
+++ b/media1.html
@@ -168,7 +168,7 @@
         </video>
 
         <!-- Images -->
-        <img src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img1.jpg" alt="Image 1">
+        <img src="google3.jpeg" alt="Image 1">
         <img src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img5.jpg" alt="Image 2">
         <img src="C:/Users/joyal/Downloads/Telegram Desktop/sweets.jpg" alt="Image 3">
         <img src="C:\Users\joyal\Downloads\img4.jpeg" alt="Image 4">
