--- a/media1.html
+++ b/media1.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img class="logo" src="C:/Users/joyal/Downloads/WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview.png" alt="Prerana Logo">
+        <img class="logo" src="WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png" alt="Prerana Logo">
         <input type="text" class="search" placeholder="Search...">
         <div class="wrapper-content">
             <div class="dropdown">
