--- a/media1.html
+++ b/media1.html
@@ -155,16 +155,16 @@
 
     <div class="collage">
         <video controls autoplay muted loop>
-            <source src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img6.mp4" type="video/mp4">
+            <source src="Telegram Desktop/prerana.img6.mp4" type="video/mp4">
         </video>
         <video controls autoplay muted loop>
-            <source src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img2.mp4" type="video/mp4">
+            <source src="Telegram Desktop/prerana.img2.mp4" type="video/mp4">
         </video>
         <video controls autoplay muted loop>
-            <source src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img4.mp4" type="video/mp4">
+            <source src="Telegram Desktop/prerana.img4.mp4" type="video/mp4">
         </video>
         <video controls autoplay muted loop>
-            <source src="C:/Users/joyal/Downloads/Telegram Desktop/WhatsApp Video 2024-12-04 at 22.42.21_3e63816a.mp4" type="video/mp4">
+            <source src="Telegram Desktop/WhatsApp Video 2024-12-04 at 22.42.21_3e63816a.mp4" type="video/mp4">
         </video>
 
         <!-- Images -->
@@ -172,9 +172,9 @@
         <img src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img5.jpg" alt="Image 2">
         <img src="C:/Users/joyal/Downloads/Telegram Desktop/sweets.jpg" alt="Image 3">
         <img src="C:\Users\joyal\Downloads\img4.jpeg" alt="Image 4">
-        <img src="C:\Users\joyal\Downloads\google1.jpeg" alt="Image 5">
-        <img src="C:\Users\joyal\Downloads\google2.jpeg" alt="Image 6">
-        <img src="C:\Users\joyal\Downloads\google5.jpg" alt="Image 7">
+        <img src="google1.jpeg" alt="Image 5">
+        <img src="google2.jpeg" alt="Image 6">
+        <img src="google5.jpg" alt="Image 7">
         <img src="C:\Users\joyal\Downloads\Telegram Desktop\whatsapp21.jpg" alt="Image 5">
         <img src="C:\Users\joyal\Downloads\google8.jpg" alt="Image 6">
         <img src="C:\Users\joyal\Downloads\google6.webp" alt="Image 7">
