--- a/media1.html
+++ b/media1.html
@@ -169,17 +169,17 @@
 
         <!-- Images -->
         <img src="google3.jpeg" alt="Image 1">
-        <img src="C:/Users/joyal/Downloads/Telegram Desktop/prerana.img5.jpg" alt="Image 2">
-        <img src="C:/Users/joyal/Downloads/Telegram Desktop/sweets.jpg" alt="Image 3">
-        <img src="C:\Users\joyal\Downloads\img4.jpeg" alt="Image 4">
+        <img src="prerana.img5.jpg" alt="Image 2">
+        <img src="sweets.jpg" alt="Image 3">
+        <img src="img4.jpeg" alt="Image 4">
         <img src="google1.jpeg" alt="Image 5">
         <img src="google2.jpeg" alt="Image 6">
         <img src="google5.jpg" alt="Image 7">
-        <img src="C:\Users\joyal\Downloads\Telegram Desktop\whatsapp21.jpg" alt="Image 5">
-        <img src="C:\Users\joyal\Downloads\google8.jpg" alt="Image 6">
-        <img src="C:\Users\joyal\Downloads\google6.webp" alt="Image 7">
-        <img src="C:\Users\joyal\Downloads\Telegram Desktop\last.jpg" alt="Image 8">
-        <img src="C:\Users\joyal\Downloads\last.jpg" alt="Image 9">
+        <img src="whatsapp21.jpg" alt="Image 5">
+        <img src="google8.jpg" alt="Image 6">
+        <img src="google6.webp" alt="Image 7">
+        <img src="last.jpg" alt="Image 8">
+        <img src="last.jpg" alt="Image 9">
     </div>
 </body>
 </html>
