--- a/aboutus2.html
+++ b/aboutus2.html
@@ -193,7 +193,7 @@
 
 </style>
 <div class="wrapper">
-    <img class="logo" src="google5.jpg">
+    <img class="logo" src="WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png">
     <input type="text" class="search" placeholder="Search...">
     <div class="wrapper-content">
         <div class="dropdown">
@@ -228,7 +228,7 @@
         </div>
     </div>
 </div>
-<img class="image" src="C:\Users\joyal\Downloads\google5.jpg" >
+<img class="image" src="google5.jpg" >
 <div class="parent">
     <div class="second">
         <p>
