--- a/aboutus2.html
+++ b/aboutus2.html
@@ -21,7 +21,7 @@
         transform: translate(-50%, -50%);
     }
     .initiatives, .contact-form,.stakeholders {
-            background-image: url('C:/Users/joyal/Downloads/imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
+            background-image: url('imdadul-hussain-YiA4wqVpLQQ-unsplash.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
