--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
             <div class="dropdown">
                 <button>Gallery</button>
                 <div class="content">
-                    <a href="preranamedia.html">Photo Gallery</a>
-                    <a href="preranamedia.html">Video Gallery</a>
+                    <a href="last.jpg">Photo Gallery</a>
+                    <a href="last.jpg">Video Gallery</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -365,7 +365,7 @@
             <div class="dropdown">
                 <button>About Us</button>
                 <div class="content">
-                    <a href="file:///C:/Users/joyal/aboutus.html">Our Founder</a>
+                    <a href="aboutus.html">Our Founder</a>
                     <a href="#">Who We Are</a>
                     <a href="#">Awards</a>
                     <a href="#">Legal</a>
