--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
             <div class="dropdown">
                 <button>Gallery</button>
                 <div class="content">
-                    <a href="last.jpg">Photo Gallery</a>
-                    <a href="last.jpg">Video Gallery</a>
+                    <a href="photoNvideos.html">Photo Gallery</a>
+                    <a href="photoNvideos.html">Video Gallery</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -401,9 +401,9 @@
         </div>
     
         <div class="pictures">  <!-- Image Section -->
-            <img src="C:\Users\joyal\Downloads\google6.webp" alt="Charity">
-            <img src="C:\Users\joyal\Downloads\google5.jpg" alt="Helping">
-            <img src="C:\Users\joyal\Downloads\google5.jpg" alt="Children">
+            <img src="google6.webp" alt="Charity">
+            <img src="google5.jpg" alt="Helping">
+            <img src="google5.jpg" alt="Children">
             <div class="play-icon"></div>
         </div>
     </div>
