--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
     <!-- Header Navigation -->
     <div class="wrapper">
-        <img class="logo" src="/api/placeholder/200/80" alt="Prerana logo">
+        <img class="logo" src="WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png" alt="Prerana logo">
         <input type="text" class="search" placeholder="Search...">
         <div class="wrapper-content">
             <div class="dropdown">
@@ -598,7 +598,7 @@
 
     <!-- Cover Image -->
     <div class="cover-section">
-        <img class="cover" src="/api/placeholder/1200/600" alt="Cover Image">
+        <img class="cover" src="7 Best Websites For Volunteering Abroad.jpg" alt="Cover Image">
     </div>
 
     <!-- Middle Section -->
@@ -622,10 +622,10 @@
             </div>
         
             <div class="pictures slideInRight">
-                <img src="/api/placeholder/300/300" alt="Charity Work 1">
-                <img src="/api/placeholder/300/300" alt="Charity Work 2">
-                <img src="/api/placeholder/300/300" alt="Charity Work 3">
-                <img src="/api/placeholder/300/300" alt="Charity Work 4">
+                <img src="charity-2.jpg" alt="Charity Work 1">
+                <img src="charity-3.jpg" alt="Charity Work 2">
+                <img src="charity-1.jpg" alt="Charity Work 3">
+                <img src="7 Best Websites For Volunteering Abroad.jpg" alt="Charity Work 4">
             </div>
         </div>
     </section>
