--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
     <!-- Cover Image -->
     <div class="cover-section">
-        <img class="cover" src="7 Best Websites For Volunteering Abroad.jpg" alt="Cover Image">
+        <img class="cover" src="Once a Child Labourer, This Bengaluru Girl Will Now Speak About Child Rights in Parliament.jpg" alt="Cover Image">
     </div>
 
     <!-- Middle Section -->
