--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@
             <div class="dropdown">
                 <button><i class="fas fa-images"></i> Gallery</button>
                 <div class="content">
-                    <a href="#"><i class="fas fa-camera"></i> Photo Gallery</a>
-                    <a href="#"><i class="fas fa-video"></i> Video Gallery</a>
+                    <a href="media1.html"><i class="fas fa-camera"></i> Photo Gallery</a>
+                    <a href="media1.html"><i class="fas fa-video"></i> Video Gallery</a>
                 </div>
             </div>
             <div class="dropdown">
