--- a/media1.html
+++ b/media1.html
@@ -306,7 +306,7 @@
             <!-- Videos -->
             <div class="gallery-item">
                 <video muted loop>
-                    <source src="prerana.img6.mp4" type="video/mp4">
+                    <source src="thanmaya5.mp4" type="video/mp4">
                 </video>
                 <div class="caption">Memories</div>
             </div>
@@ -331,27 +331,27 @@
             
             <!-- Images -->
             <div class="gallery-item">
-                <img src="prerana.img1.jpg" alt="Beautiful moment">
+                <img src="thanmaya1.jpg" alt="Beautiful moment">
                 <div class="caption">Beautiful moment</div>
             </div>
             <div class="gallery-item">
-                <img src="prerana.img5.jpg" alt="Sunny day">
+                <img src="thanmaya2" alt="Sunny day">
                 <div class="caption">Sunny day</div>
             </div>
             <div class="gallery-item">
-                <img src="sweets.jpg" alt="Delicious treats">
+                <img src="thanmaya2" alt="Delicious treats">
                 <div class="caption">Delicious treats</div>
             </div>
             <div class="gallery-item">
-                <img src="img4.jpeg" alt="Perfect view">
+                <img src="thanmaya4" alt="Perfect view">
                 <div class="caption">Perfect view</div>
             </div>
             <div class="gallery-item">
-                <img src="google1.jpeg" alt="Inspiration">
+                <img src="thanmaya6.jpg" alt="Inspiration">
                 <div class="caption">Inspiration</div>
             </div>
             <div class="gallery-item">
-                <img src="google2.jpeg" alt="Exploration">
+                <img src="thanmaya8" alt="Exploration">
                 <div class="caption">Exploration</div>
             </div>
             <div class="gallery-item">
@@ -374,8 +374,20 @@
                 <img src="last.jpg" alt="Final moment">
                 <div class="caption">Final moment</div>
             </div>
+              <div class="gallery-item">
+                <img src="google1" alt="Final moment">
+                <div class="caption">Final moment</div>
+            </div>
+              <div class="gallery-item">
+                <img src="google5.jpeg" alt="Final moment">
+                <div class="caption">Final moment</div>
+            </div>
+              <div class="gallery-item">
+                <img src="google2.jpeg" alt="Final moment">
+                <div class="caption">Final moment</div>
+            </div>
             <div class="gallery-item">
-                <img src="last.jpg" alt="Reflection">
+                <img src="google8.jpeg" alt="Reflection">
                 <div class="caption">Reflection</div>
             </div>
         </div>
