--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
     <!-- Header Navigation -->
     <div class="wrapper">
-        <img class="logo" src="cover-image.jpg" alt="Prerana logo">
+        <img class="logo" src="WhatsApp_Image_2025-02-27_at_16.00.15_b85efd61-removebg-preview (1).png" alt="Prerana logo">
         <input type="text" class="search" placeholder="Search...">
         <div class="wrapper-content">
             <div class="dropdown">
@@ -598,7 +598,7 @@
 
     <!-- Cover Image -->
     <div class="cover-section">
-        <img class="cover" src="Once a Child Labourer, This Bengaluru Girl Will Now Speak About Child Rights in Parliament.jpg" alt="Cover Image">
+        <img class="cover" src="cover-image.jpg" alt="Cover Image">
     </div>
 
     <!-- Middle Section -->
