--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
     <!-- Cover Image -->
     <div class="cover-section">
-        <img class="cover" src="cover-image.jpg" alt="Cover Image">
+        <img class="cover" src="covepic.jpg" alt="Cover Image">
     </div>
 
     <!-- Middle Section -->
