--- a/media1.html
+++ b/media1.html
@@ -312,19 +312,19 @@
             </div>
             <div class="gallery-item">
                 <video muted loop>
-                    <source src="prerana.img2.mp4" type="video/mp4">
+                    <source src="vidoe3.mp4" type="video/mp4">
                 </video>
                 <div class="caption">Special moments</div>
             </div>
             <div class="gallery-item">
                 <video muted loop>
-                    <source src="prerana.img4.mp4" type="video/mp4">
+                    <source src="video4.mp4" type="video/mp4">
                 </video>
                 <div class="caption">Adventure time</div>
             </div>
             <div class="gallery-item">
                 <video muted loop>
-                    <source src="WhatsApp Video 2024-12-04 at 22.42.21_3e63816a.mp4" type="video/mp4">
+                    <source src="video7.mp4" type="video/mp4">
                 </video>
                 <div class="caption">Friends forever</div>
             </div>
@@ -339,7 +339,7 @@
                 <div class="caption">Sunny day</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya2" alt="Delicious treats">
+                <img src="thanmaya3" alt="Delicious treats">
                 <div class="caption">Delicious treats</div>
             </div>
             <div class="gallery-item">
@@ -359,7 +359,7 @@
                 <div class="caption">Discovery</div>
             </div>
             <div class="gallery-item">
-                <img src="whatsapp21.jpg" alt="Connection">
+                <img src="thanmaya7" alt="Connection">
                 <div class="caption">Connection</div>
             </div>
             <div class="gallery-item">
@@ -375,11 +375,15 @@
                 <div class="caption">Final moment</div>
             </div>
               <div class="gallery-item">
-                <img src="google1" alt="Final moment">
+                <img src="google1.jpg" alt="Final moment">
                 <div class="caption">Final moment</div>
             </div>
               <div class="gallery-item">
                 <img src="google5.jpeg" alt="Final moment">
+                <div class="caption">Final moment</div>
+            </div>
+             <div class="gallery-item">
+                <img src="download.jpg" alt="Final moment">
                 <div class="caption">Final moment</div>
             </div>
               <div class="gallery-item">
@@ -387,7 +391,7 @@
                 <div class="caption">Final moment</div>
             </div>
             <div class="gallery-item">
-                <img src="google8.jpeg" alt="Reflection">
+                <img src="d6b8a908-5000-4d62-9425-124b0e4afa6b.jpg" alt="Reflection">
                 <div class="caption">Reflection</div>
             </div>
         </div>
