--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
             <div class="dropdown">
                 <button><i class="fas fa-hand-holding-heart"></i> Donate</button>
                 <div class="content">
-                    <a href="#"><i class="fas fa-file-alt"></i> Online Donation Policy</a>
-                    <a href="#"><i class="fas fa-heart"></i> Donate Now</a>
+                    <a href="aboutus2.html"><i class="fas fa-file-alt"></i> Online Donation Policy</a>
+                    <a href="aboutus2.html"><i class="fas fa-heart"></i> Donate Now</a>
                 </div>
             </div>
             <div class="dropdown">
