--- a/media1.html
+++ b/media1.html
@@ -335,15 +335,15 @@
                 <div class="caption">Beautiful moment</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya2" alt="Sunny day">
+                <img src="thanmaya2.jpg" alt="Sunny day">
                 <div class="caption">Sunny day</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya3" alt="Delicious treats">
+                <img src="thanmaya3.jpg" alt="Delicious treats">
                 <div class="caption">Delicious treats</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya4" alt="Perfect view">
+                <img src="thanmaya4.jpg" alt="Perfect view">
                 <div class="caption">Perfect view</div>
             </div>
             <div class="gallery-item">
@@ -351,7 +351,7 @@
                 <div class="caption">Inspiration</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya8" alt="Exploration">
+                <img src="thanmaya8.jpg" alt="Exploration">
                 <div class="caption">Exploration</div>
             </div>
             <div class="gallery-item">
@@ -359,7 +359,7 @@
                 <div class="caption">Discovery</div>
             </div>
             <div class="gallery-item">
-                <img src="thanmaya7" alt="Connection">
+                <img src="thanmaya7.jpg" alt="Connection">
                 <div class="caption">Connection</div>
             </div>
             <div class="gallery-item">
@@ -374,21 +374,21 @@
                 <img src="last.jpg" alt="Final moment">
                 <div class="caption">Final moment</div>
             </div>
-              <div class="gallery-item">
-                <img src="google1.jpg" alt="Final moment">
-                <div class="caption">Final moment</div>
+            <div class="gallery-item">
+                <img src="google1.jpg" alt="Peaceful scene">
+                <div class="caption">Peaceful scene</div>
             </div>
-              <div class="gallery-item">
-                <img src="google5.jpeg" alt="Final moment">
-                <div class="caption">Final moment</div>
+            <div class="gallery-item">
+                <img src="google5.jpeg" alt="Breathtaking view">
+                <div class="caption">Breathtaking view</div>
             </div>
-             <div class="gallery-item">
-                <img src="download.jpg" alt="Final moment">
-                <div class="caption">Final moment</div>
+            <div class="gallery-item">
+                <img src="download.jpg" alt="Tranquil moment">
+                <div class="caption">Tranquil moment</div>
             </div>
-              <div class="gallery-item">
-                <img src="google2.jpeg" alt="Final moment">
-                <div class="caption">Final moment</div>
+            <div class="gallery-item">
+                <img src="google2.jpeg" alt="Golden memories">
+                <div class="caption">Golden memories</div>
             </div>
             <div class="gallery-item">
                 <img src="d6b8a908-5000-4d62-9425-124b0e4afa6b.jpg" alt="Reflection">
