--- a/index.html
+++ b/index.html
@@ -587,10 +587,10 @@
             <div class="dropdown">
                 <button><i class="fas fa-info-circle"></i> About Us</button>
                 <div class="content">
-                    <a href="#"><i class="fas fa-user"></i> Our Founder</a>
-                    <a href="#"><i class="fas fa-users"></i> Who We Are</a>
-                    <a href="#"><i class="fas fa-award"></i> Awards</a>
-                    <a href="#"><i class="fas fa-gavel"></i> Legal</a>
+                    <a href="aboutus.html"><i class="fas fa-user"></i> Our Founder</a>
+                    <a href="aboutus.html"><i class="fas fa-users"></i> Who We Are</a>
+                    <a href="aboutus.html"><i class="fas fa-award"></i> Awards</a>
+                    <a href="aboutus.html"><i class="fas fa-gavel"></i> Legal</a>
                 </div>
             </div>
         </div>
